--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,7 @@
   limitations under the License.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.akolb</groupId>
@@ -30,26 +29,31 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <javac.target>1.8</javac.target>
-    <hive.version>2.3.0</hive.version>
-    <checkstyle.conf.dir>${basedir}/checkstyle</checkstyle.conf.dir>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <javac.target>1.8</javac.target>
+    <hive.version>3.1.3000.7.1.6.0-297</hive.version>
+    <checkstyle.conf.dir>${basedir}/checkstyle</checkstyle.conf.dir>
     <javac.errorprone.version>2.8</javac.errorprone.version>
     <errorprone.core.version>2.3.1</errorprone.core.version>
-    <maven.surefire.version>2.22.0</maven.surefire.version>
-    <maven.javadoc.version>2.9.1</maven.javadoc.version>
+    <maven.surefire.version>3.0.0-M5</maven.surefire.version>
+    <maven.javadoc.version>3.3.0</maven.javadoc.version>
     <jmh-core.version>1.21</jmh-core.version>
     <google-gson.version>2.8.5</google-gson.version>
     <picoli.version>3.1.0</picoli.version>
     <jetbrains-annotations.version>16.0.2</jetbrains-annotations.version>
-    <log4j12.version>1.8.0-beta2</log4j12.version>
+    <log4j12.version>1.7.30</log4j12.version>
+    <log4j.version>1.2.17</log4j.version>
+    <log4j2.version>2.10.0</log4j2.version>
     <appache-commons-math3.version>3.6.1</appache-commons-math3.version>
     <commons-cli.version>1.4</commons-cli.version>
-    <maven-site.version>3.7.1</maven-site.version>
+    <maven-site.version>3.9.1</maven-site.version>
   </properties>
 
   <repositories>
+    <repository>
+      <id>cloudera</id>
+      <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+    </repository>
     <repository>
       <id>spring-libs</id>
       <url>http://repo.spring.io/libs-milestone/</url>
@@ -58,10 +62,36 @@
 
   <dependencyManagement>
     <dependencies>
+      <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>${log4j12.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${log4j12.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.apache.hive.hcatalog</groupId>
         <artifactId>hive-hcatalog-server-extensions</artifactId>
         <version>${hive.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.el</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <!-- HACK.  Transitive dependency for nimbus-jose-jwt.  Needed for
+                    packaging.  Please re-check this version when updating
+                    nimbus-jose-jwt.  Please read HADOOP-14903 for more details.
+        -->
+        <groupId>net.minidev</groupId>
+        <artifactId>json-smart</artifactId>
+        <version>2.4.7</version>
       </dependency>
       <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
       <dependency>
@@ -75,12 +105,28 @@
         <artifactId>commons-math3</artifactId>
         <version>${appache-commons-math3.version}</version>
       </dependency>
-      <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+
       <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-log4j12</artifactId>
-        <version>${log4j12.version}</version>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>${log4j.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-1.2-api</artifactId>
+        <version>${log4j2.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-web</artifactId>
+        <version>${log4j2.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-slf4j-impl</artifactId>
+        <version>${log4j2.version}</version>
+      </dependency>
+
       <!-- https://mvnrepository.com/artifact/org.jetbrains/annotations -->
       <dependency>
         <groupId>org.jetbrains</groupId>
@@ -110,7 +156,7 @@
         <groupId>info.picocli</groupId>
         <artifactId>picocli</artifactId>
         <version>${picoli.version}</version>
-      </dependency><!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+      </dependency>      <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
       <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
@@ -158,7 +204,7 @@
     <dependency>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-project-info-reports-plugin</artifactId>
-      <version>3.0.0</version>
+      <version>3.1.2</version>
       <type>maven-plugin</type>
     </dependency>
   </dependencies>
@@ -168,19 +214,19 @@
       <plugins>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
-          <version>2.5</version>
+          <version>3.1.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.1</version>
+          <version>3.0.0-M1</version>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
+          <version>3.0.0-M1</version>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>2.4</version>
+          <version>3.2.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
@@ -188,11 +234,7 @@
         </plugin>
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>2.6</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.3</version>
+          <version>3.2.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-source-plugin</artifactId>
@@ -206,17 +248,16 @@
           <artifactId>maven-site-plugin</artifactId>
           <version>${maven-site.version}</version>
         </plugin>
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>3.3.0</version>
+        </plugin>
       </plugins>
     </pluginManagement>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-site-plugin</artifactId>
-      </plugin>
-    </plugins>
   </build>
 
   <reporting>
