--- a/metastore-benchmarks/pom.xml
+++ b/metastore-benchmarks/pom.xml
@@ -13,6 +13,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>xalan</groupId>
+      <artifactId>xalan</artifactId>
+      <version>2.4.1</version>
+    </dependency>
+    <dependency>
       <groupId>com.akolb</groupId>
       <artifactId>metastore-tools-common</artifactId>
       <version>1.0-SNAPSHOT</version>
